--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/miketham24/regexcite
 BugReports: https://github.com/miketham24/regexcite/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
